@@ -33,14 +33,6 @@ zcmi.afm zd.afm
 
 public_fonts = matrix.afm matrix.pfa
 
-EXTRA_DIST = font.map $(default_afm) $(public_fonts)
+afmdir = $(pkgdatadir)/afm
+dist_afm_DATA = font.map $(default_afm) $(public_fonts)
 
-install-data-local:
-	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(datadir)/enscript
-	$(top_srcdir)/mkinstalldirs $(DESTDIR)$(datadir)/enscript/afm
-	for f in $(EXTRA_DIST); do \
-	  $(INSTALL_DATA) $(srcdir)/$$f $(DESTDIR)$(datadir)/enscript/afm/$$f; \
-	done
-
-uninstall-local:
-	rm -rf $(DESTDIR)$(datadir)/enscript/afm
