@@ -1,3 +1,11 @@
+2008-02-03  Tim Retout  <diocles@gnu.org>
+
+	* Makefile.am (install-data-local): Remove.
+	(uninstall-local): Likewise.
+	(EXTRA_DIST): Likewise.
+	(afmdir): New variable for location of afm files.
+	(dist_afm_DATA): New variable with previous contents of EXTRA_DIST.
+
 2008-01-29  Tim Retout  <diocles@gnu.org>
 
 	* Makefile.am (install-data-local): Prefix install paths with
